--- a/Compiler_Principle/Compiler_Principle.vcxproj
+++ b/Compiler_Principle/Compiler_Principle.vcxproj
@@ -149,6 +149,8 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="FileDatabyTxt.h" />
     <ClInclude Include="InformationManager.h" />
+    <ClInclude Include="LL_1_Table.h" />
+    <ClInclude Include="NounMapSet.h" />
     <ClInclude Include="ReceivingData.h" />
     <ClInclude Include="StateManger.h" />
     <ClInclude Include="stdafx.h" />
@@ -161,6 +163,8 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="FileDatabyTxt.cpp" />
     <ClCompile Include="InformationManager.cpp" />
+    <ClCompile Include="LL_1_Table.cpp" />
+    <ClCompile Include="NounMapSet.cpp" />
     <ClCompile Include="ReceivingData.cpp" />
     <ClCompile Include="StateManger.cpp" />
     <ClCompile Include="stdafx.cpp">
