语法分析主逻辑框架搭建

--- a/Compiler_Principle/Compiler_Principle.vcxproj.filters
+++ b/Compiler_Principle/Compiler_Principle.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="LL_1_Table.h">
       <Filter>头文件\语法分析</Filter>
     </ClInclude>
+    <ClInclude Include="SyntaxAnalysis.h">
+      <Filter>头文件\语法分析</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -102,6 +105,9 @@
       <Filter>源文件\语法分析</Filter>
     </ClCompile>
     <ClCompile Include="LL_1_Table.cpp">
+      <Filter>源文件\语法分析</Filter>
+    </ClCompile>
+    <ClCompile Include="SyntaxAnalysis.cpp">
       <Filter>源文件\语法分析</Filter>
     </ClCompile>
   </ItemGroup>
