--- a/Compiler_Principle/Compiler_Principle.vcxproj
+++ b/Compiler_Principle/Compiler_Principle.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="ReceivingData.h" />
     <ClInclude Include="StateManger.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SyntaxAnalysis.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TranslateRelation.h" />
   </ItemGroup>
@@ -173,6 +174,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SyntaxAnalysis.cpp" />
     <ClCompile Include="TranslateRelation.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
