--- a/Compiler_Principle/Compiler_Principle.vcxproj
+++ b/Compiler_Principle/Compiler_Principle.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="CharacterTable.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="FileDatabyTxt.h" />
+    <ClInclude Include="First_Follow.h" />
     <ClInclude Include="InformationManager.h" />
     <ClInclude Include="LL_1_Table.h" />
     <ClInclude Include="NounMapSet.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="Compiler_Principle.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="FileDatabyTxt.cpp" />
+    <ClCompile Include="First_Follow.cpp" />
     <ClCompile Include="InformationManager.cpp" />
     <ClCompile Include="LL_1_Table.cpp" />
     <ClCompile Include="NounMapSet.cpp" />
